--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I keep changing my job title to adjust the level of challenge to my comfort. At the moment, I&rsquo;m trying to act as a consultant and hope no one notices.</p>
 <p>Talk to me about Cloud Computing, Enterprise Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the following places.</p>
 <ul>
-<li><a href="posts/">blog</a></li>
+<li><a href="blog/">blog</a></li>
 <li><a href="https://github.com/chamilad">github</a></li>
 <li><a href="https://fosstodon.org/@chamilad">mastodon</a></li>
 <li><a href="https://twitter.com/chamilad">twitter</a></li>
