--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </figcaption>
 </figure>
 
-<p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I keep changing my job title to adjust the level of challenge to my comfort. At the moment, I&rsquo;m trying to act as a consultant and hope no one notices.</p>
+<p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, and technical team leadership. At the moment, I&rsquo;m trying to act as a consultant and hope no one notices.</p>
 <p>Talk to me about Cloud Computing, Enterprise Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the following places.</p>
 <ul>
 <li><a href="blog/">blog</a></li>
