--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       "accountablePerson" : "",
       "copyrightHolder" : "",
       "copyrightYear" : "2021",
-      "datePublished": "2021-07-18 22:20:47 \x2b1200 NZST",
-      "dateModified" : "2021-07-18 22:20:47 \x2b1200 NZST",
+      "datePublished": "2021-11-12 19:32:16 \x2b1300 NZDT",
+      "dateModified" : "2021-11-12 19:32:16 \x2b1300 NZDT",
       "url" : "https:\/\/chamila.dev\/",
       "keywords" : [  ]
   }
