--- a/404.html
+++ b/404.html
@@ -43,6 +43,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/tomorrow.min.css" />
   <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/light.css">
+  <link rel="stylesheet" href="/css/dark.css">
   <link href="/blog/index.xml" rel="alternate" type="application/rss+xml" title="chamila.dev">
 
   <link href="/fa/css/all.css" rel="stylesheet">
@@ -75,11 +77,12 @@
   </article>
 
   <script src="/js/highlight.pack.js"></script>
-<script src="https://unpkg.com/quicklink@0.1.1/dist/quicklink.umd.js"></script>
+<script src="/js/theme.js"></script>
+
 
 <script>
   hljs.initHighlightingOnLoad();
-  
+
   var posts = document.getElementById('posts-list');
   posts && quicklink({
     el: posts,
