--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   <link rel="stylesheet" href="https://unpkg.com/flexboxgrid@6.3.1/dist/flexboxgrid.min.css" />
   
   <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/light.css">
+  <link rel="stylesheet" href="/css/dark.css">
   <link href="/blog/index.xml" rel="alternate" type="application/rss+xml" title="chamila.dev">
 
   <link href="/fa/css/all.css" rel="stylesheet">
@@ -60,7 +62,7 @@
 </head>
 
 
-<body class="home">
+<body class="home theme-light">
   <article class="post " id="article">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2 col-lg-6 col-lg-offset-3">
@@ -86,17 +88,20 @@
 </div>
 
         <div class="site-footer">
+  
+
   <div class="sm-icons">
-    <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
-      <i class="fas fa-rss sm-icon"></i>
-    </a>
-    <a href="https://github.com/chamilad" target="_blank" title="github">
-      <i class="fab fa-github sm-icon"></i>
-    </a>
-    <a href="https://fosstodon.org/@chamilad" target="_blank" title="fosstodon">
-      <i class="fab fa-mastodon sm-icon"></i>
-    </a>
-  </div>
+  <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
+    <i class="fas fa-rss sm-icon"></i>
+  </a>
+  <a href="https://github.com/chamilad" target="_blank" title="github">
+    <i class="fab fa-github sm-icon"></i>
+  </a>
+  <a href="https://fosstodon.org/@chamilad" target="_blank" title="fosstodon">
+    <i class="fab fa-mastodon sm-icon"></i>
+  </a>
+</div>
+
   
   <div class="site-footer-item">
     Modified
@@ -110,11 +115,12 @@
   </article>
 
   <script src="/js/highlight.pack.js"></script>
-<script src="https://unpkg.com/quicklink@0.1.1/dist/quicklink.umd.js"></script>
+<script src="/js/theme.js"></script>
+
 
 <script>
   hljs.initHighlightingOnLoad();
-  
+
   var posts = document.getElementById('posts-list');
   posts && quicklink({
     el: posts,
