Add last post on mlops

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <p>All photos and diagrams published on this site, unless specifically credited to another
 source, are copyrighted to me.</p>
 </blockquote>
+<hr>
 <pre tabindex="0"><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQINBF+MLGEBEAC+p3tjARFc/c9SuahvUr2Lsc6h7U24ay4SLRU/tRimBEQ3oNwh
@@ -219,6 +220,7 @@ sG/KnDAEiA1e1dVpd3Ei0V9kPBnqkwIdL9aRWsifNYNhDgaCNtI=
 </div>
 
   
+  All photos published on this site are copyrighted.
   <div class="site-footer-item">
     Modified
     <a href="https://github.com/joway/hugo-theme-yinyang" target="_blank">YinYang</a>
