--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </figcaption>
 </figure>
 
-<p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, and technical team leadership. At the moment, I&rsquo;m a Cloud Architect mainly focusing on delivering projects with AWS.</p>
+<p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, and technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on delivering projects with AWS.</p>
 <p>Talk to me about Cloud Computing, Enterprise Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the following places.</p>
 <ul>
 <li><a href="blog/">blog</a></li>
