--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="home-content-wrapper">
             <div class="home-post-content markdown-body">
-              <p>I work on anything exciting that draws my attention. For a long time, this has been software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS.</p>
+              <p>I work on anything exciting that draws my attention in software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS.</p>
 <p>Talk to me about Cloud Computing, Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the spaces on the right.</p>
 
               <blockquote>
