Add content 2024-05-31 16:24: update home page

--- a/index.html
+++ b/index.html
@@ -70,37 +70,42 @@
         </div>
         <div class="home-content-wrapper">
             <div class="home-post-content markdown-body">
-              <p>I work on anything exciting that draws my attention in software engineering and devops. I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS.</p>
+              <p>I work on anything exciting that draws my attention in software engineering and Cloud. So far I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS. I&rsquo;m also an <strong>AWS APN Ambassador</strong> and an <strong>AWS Community Builder</strong>.</p>
 <p>Talk to me about Cloud Computing, Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the spaces on the right.</p>
 
               <blockquote>
-                  <i class="fas fa-copyright"></i> Unless specifically mentioned, all photos included are copyrighted.
+                  <i class="fas fa-copyright"></i> Unless specifically mentioned, all photos included are works of the author and are copyrighted.
               </blockquote>
             </div>
             <div class="home-social-media">
               <div class="home-sm-entry">
+                <a href="https://www.youtube.com/@sliced_array?sub_confirmation=1" target="_blank" title="youtube">
+                  <i class="fab fa-youtube sm-icon"></i> youtube
+                </a>
+              </div>
+              <div class="home-sm-entry">
                 <a href="https://chamila.dev//blog/" target="_blank" title="rss">
-                  <i class="fas fa-book sm-icon"></i> Blog
+                  <i class="fas fa-book sm-icon"></i> blog
                 </a>
               </div>
               <div class="home-sm-entry">
                 <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
-                  <i class="fas fa-rss sm-icon"></i> Blog (rss)
+                  <i class="fas fa-rss sm-icon"></i> blog (rss)
                 </a>
               </div>
               <div class="home-sm-entry">
                 <a href="https://github.com/chamilad" target="_blank" title="github">
-                  <i class="fab fa-github sm-icon"></i> Github
+                  <i class="fab fa-github sm-icon"></i> github
                 </a>
               </div>
               <div class="home-sm-entry">
                 <a href="https://fosstodon.org/@chamilad" target="_blank" title="fosstodon" rel="me">
-                  <i class="fab fa-mastodon sm-icon"></i> Mastodon
+                  <i class="fab fa-mastodon sm-icon"></i> mastodon
                 </a>
               </div>
               <div class="home-sm-entry">
                 <a href="https://chamila.dev//fs/chamilad.pub" target="_blank" title="gpg public key" rel="me">
-                  <i class="fas fa-key sm-icon"></i> Public Key
+                  <i class="fas fa-key sm-icon"></i> public key
                 </a>
               </div>
             </div>
