--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
   <link rel="stylesheet" href="https://unpkg.com/flexboxgrid@6.3.1/dist/flexboxgrid.min.css" />
   
-  <link rel="stylesheet" href="/css/index.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/%20css/index.css">
+  <link rel="stylesheet" href="/%20css/home.css">
   <link href="/blog/index.xml" rel="alternate" type="application/rss+xml" title="chamila.dev">
 
-  <link href="/fa/css/all.css" rel="stylesheet">
+  <link href="/%20fa/css/all.css" rel="stylesheet">
 
   
   
@@ -69,48 +69,49 @@
           <img src="/img/hagley_park.jpg" />
         </div>
         <div class="home-content-wrapper">
-            <div class="home-post-content markdown-body">
-              <p>I work on anything exciting that draws my attention in software engineering and Cloud. So far I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS. I&rsquo;m also an <strong>AWS APN Ambassador</strong> and an <strong>AWS Community Builder</strong>.</p>
+          <div class="home-post-content markdown-body">
+            <p>I work on anything exciting that draws my attention in software engineering and Cloud. So far I&rsquo;ve taken on a few roles ranging from software engineering, devops and cloud engineering, to technical team leadership. At the moment, I&rsquo;m a Senior Cloud Architect mainly focusing on architecting solutions on AWS. I&rsquo;m also an <strong>AWS APN Ambassador</strong> and an <strong>AWS Community Builder</strong>.</p>
 <p>Talk to me about Cloud Computing, Middleware, DevOps, or coding in general. I&rsquo;m mostly active in the spaces on the right.</p>
 
-              <blockquote>
-                  <i class="fas fa-copyright"></i> Unless specifically mentioned, all photos included are works of the author and are copyrighted.
-              </blockquote>
+            <blockquote>
+              <i class="fas fa-copyright"></i> Unless specifically mentioned, all photos included are works of the
+              author and are copyrighted.
+            </blockquote>
+          </div>
+          <div class="home-social-media">
+            <div class="home-sm-entry">
+              <a href="https://www.youtube.com/@slicedarray?sub_confirmation=1" target="_blank" title="youtube">
+                <i class="fab fa-youtube sm-icon"></i> youtube
+              </a>
             </div>
-            <div class="home-social-media">
-              <div class="home-sm-entry">
-                <a href="https://www.youtube.com/@sliced_array?sub_confirmation=1" target="_blank" title="youtube">
-                  <i class="fab fa-youtube sm-icon"></i> youtube
-                </a>
-              </div>
-              <div class="home-sm-entry">
-                <a href="https://chamila.dev//blog/" target="_blank" title="rss">
-                  <i class="fas fa-book sm-icon"></i> blog
-                </a>
-              </div>
-              <div class="home-sm-entry">
-                <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
-                  <i class="fas fa-rss sm-icon"></i> blog (rss)
-                </a>
-              </div>
-              <div class="home-sm-entry">
-                <a href="https://github.com/chamilad" target="_blank" title="github">
-                  <i class="fab fa-github sm-icon"></i> github
-                </a>
-              </div>
-              <div class="home-sm-entry">
-                <a href="https://fosstodon.org/@chamilad" target="_blank" title="fosstodon" rel="me">
-                  <i class="fab fa-mastodon sm-icon"></i> mastodon
-                </a>
-              </div>
-              <div class="home-sm-entry">
-                <a href="https://chamila.dev//fs/chamilad.pub" target="_blank" title="gpg public key" rel="me">
-                  <i class="fas fa-key sm-icon"></i> public key
-                </a>
-              </div>
+            <div class="home-sm-entry">
+              <a href="https://chamila.dev//blog/" target="_blank" title="rss">
+                <i class="fas fa-book sm-icon"></i> blog
+              </a>
             </div>
+            <div class="home-sm-entry">
+              <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
+                <i class="fas fa-rss sm-icon"></i> blog (rss)
+              </a>
+            </div>
+            <div class="home-sm-entry">
+              <a href="https://github.com/chamilad" target="_blank" title="github">
+                <i class="fab fa-github sm-icon"></i> github
+              </a>
+            </div>
+            <div class="home-sm-entry">
+              <a href="https://fosstodon.org/@chamilad" target="_blank" title="fosstodon" rel="me">
+                <i class="fab fa-mastodon sm-icon"></i> mastodon
+              </a>
+            </div>
+            <div class="home-sm-entry">
+              <a href="https://chamila.dev//fs/chamilad.pub" target="_blank" title="gpg public key" rel="me">
+                <i class="fas fa-key sm-icon"></i> public key
+              </a>
+            </div>
+          </div>
         </div>
-           <div class="site-footer">
+        <div class="site-footer">
   <div class="sm-icons">
   <a href="https://chamila.dev//blog/index.xml" target="_blank" title="rss">
     <i class="fas fa-rss sm-icon"></i>
@@ -131,9 +132,9 @@
   </div>
 </div>
 
-  <div class="footer-version">
-    db06ced
-  </div>
+        <div class="footer-version">
+          db06ced
+        </div>
       </div>
     </div>
   </article>
