Add content 2025-08-20 11:13: -m fix styling bug

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
   <link rel="stylesheet" href="https://unpkg.com/flexboxgrid@6.3.1/dist/flexboxgrid.min.css" />
   
-  <link rel="stylesheet" href="/%20css/index.css">
-  <link rel="stylesheet" href="/%20css/home.css">
+  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/home.css">
   <link href="/blog/index.xml" rel="alternate" type="application/rss+xml" title="chamila.dev">
 
-  <link href="/%20fa/css/all.css" rel="stylesheet">
+  <link href="/fa/css/all.css" rel="stylesheet">
 
   
   
